# Vichmat

./: CMakeLists.txt  README.md  main.cpp
Task1/: main.cpp
Task1/back/: DynamicSystem.h  Matrix.h  Triangle.h  Vector.h
Task1/back/Rb/: RigidBody.cpp  RigidBody.h
Task4/CLion/SLY/: CMakeLists.txt  main.cpp
Task4/CLion/SLY/Methods/Bijection/: Bijection.cpp  Bijection.h
Task4/CLion/SLY/Methods/Newton/: Newton.cpp  Newton.h
Task4/Qt/: .~lock.Без имени 1.odt#  Пример работы в программе.odt
Task4/Qt/build-vmCalculate-Desktop-Release/: Makefile  StartMe  moc_func.cpp  moc_mainwindow.cpp  ui_func.h  ui_mainwindow.h  vmCalculate
Task4/Qt/vmCalculate/: bijection.cpp  bijection.h  func.cpp  func.h  func.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newton.cpp  newton.h  vmCalculate.pro
back/: ContextDynamic.h  DynamicSystem.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Triangle.h  Vector.cpp  Vector.h
back/Rb/: RigidBody.cpp  RigidBody.h  RigitBody.cpp  RigitBody.h
